<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:textColor="#000000"
        android:text="@string/welcome_text" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#000000"
        android:text="@string/player_1_name"
        android:layout_marginTop="20dp"
        />
    
    <EditText 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/plyer_1_name_et"
        android:textColor="#000000"
        />
    
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#000000"
        android:text="@string/player_2_name"
        android:layout_marginTop="20dp"
        />
     
     <EditText 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/plyer_2_name_et"
        android:textColor="#000000"
        />
     
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#000000"
        android:text="@string/dimensions"
        android:layout_marginTop="20dp"
        />
     
     <EditText 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_dimensions"
        android:inputType="numberDecimal"
        android:id="@+id/dimension_et"
        android:textColor="#000000"
        />
     

     <Button         
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Start!"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="20dp"
         android:id="@+id/submit_btn"
         />
    
</LinearLayout>